--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.12"
 dependencies = [
     "django (>=5.2.4,<6.0.0)",
     "pypdf (>=5.8.0,<6.0.0)",
-    "num2words (>=0.5.14,<0.6.0)"
+    "num2words (>=0.5.14,<0.6.0)",
+    "weasyprint (>=66.0,<67.0)"
 ]
 
 
