--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,10 @@ dependencies = [
     "django (>=5.2.4,<6.0.0)",
     "pypdf (>=5.8.0,<6.0.0)",
     "num2words (>=0.5.14,<0.6.0)",
-    "weasyprint (>=66.0,<67.0)"
+    "weasyprint (>=66.0,<67.0)",
+    "django-bootstrap5 (>=25.1,<26.0)",
+    "django-import-export (>=4.3.9,<5.0.0)",
+    "tablib[xlsx] (>=3.8.0,<4.0.0)"
 ]
 
 
