--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "weasyprint (>=66.0,<67.0)",
     "django-bootstrap5 (>=25.1,<26.0)",
     "django-import-export (>=4.3.9,<5.0.0)",
-    "tablib[xlsx] (>=3.8.0,<4.0.0)"
+    "tablib[xlsx] (>=3.8.0,<4.0.0)",
+    "python-decouple (>=3.8,<4.0)",
+    "dj-database-url (>=3.0.1,<4.0.0)"
 ]
 
 
