--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "django-import-export (>=4.3.9,<5.0.0)",
     "tablib[xlsx] (>=3.8.0,<4.0.0)",
     "python-decouple (>=3.8,<4.0)",
-    "dj-database-url (>=3.0.1,<4.0.0)"
+    "dj-database-url (>=3.0.1,<4.0.0)",
+    "psycopg (>=3.2.9,<4.0.0)"
 ]
 
 
