--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "tablib[xlsx] (>=3.8.0,<4.0.0)",
     "python-decouple (>=3.8,<4.0)",
     "dj-database-url (>=3.0.1,<4.0.0)",
-    "psycopg (>=3.2.9,<4.0.0)"
+    "psycopg (>=3.2.9,<4.0.0)",
+    "django-multi-email-field (>=0.8.0,<0.9.0)"
 ]
 
 
