--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,13 @@ dependencies = [
     "pypdf (>=5.8.0,<6.0.0)",
     "num2words (>=0.5.14,<0.6.0)",
     "weasyprint (>=66.0,<67.0)",
-    "django-bootstrap5 (>=25.1,<26.0)",
+    "django-bootstrap5 (>=26.2,<27.0)",
     "django-import-export (>=4.3.9,<5.0.0)",
     "tablib[xlsx] (>=3.8.0,<4.0.0)",
     "python-decouple (>=3.8,<4.0)",
     "dj-database-url (>=3.0.1,<4.0.0)",
     "psycopg (>=3.2.9,<4.0.0)",
-    "django-multi-email-field (>=0.8.0,<0.9.0)"
+    "django-multi-email-field (>=0.8.0,<0.9.0)",
 ]
 
 
