to Email backend

--- a/.env.sample
+++ b/.env.sample
@@ -5,4 +5,4 @@ SECRET_KEY=<generate secret key>
 # default db is sqlite3
 # DATABASE_URL=postgres://dbuser:dbpassword@dbhost:5432/dbname
 ALLOWED_HOSTS=0.0.0.0,localhost,127.0.0.1
-SITE=http://localhost:8000
+SITE_URL=http://localhost:8000
